tests/dependancies/bad/ambiguity/main.rs
mod duplicated_module;

fn main() {
    print!("Should not work\n")
}